# LegalMind-AI

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: main.py  schemas.py
api/routes/: analyze.py  query.py  upload.py
config/: prompts.yaml  settings.py
data/synthetic_eval/: per_sample.jsonl  results.json  testset.json
docs/: API.md  ARCHITECTURE.md  EVALUATION_RESULTS.md
scripts/: generate_testset.py  run_eval.py
src/agents/: orchestrator.py  qa_agent.py  risk_agent.py  summary_agent.py
src/evaluation/: evaluator.py  metrics.py  synthetic_data.py
src/explainability/: confidence_scorer.py  reasoning_tracer.py  source_tracker.py
src/ingestion/: __init__.py  chunking.py  embeddings.py  loaders.py
src/llm/: provider.py  rate_limiter.py
src/retrieval/: hybrid_search.py  query_expansion.py  reranker.py  retriever.py
src/utils/: helpers.py  logging.py
tests/: conftest.py  test_agents.py  test_evaluation.py  test_ingestion.py  test_retrieval.py
ui/: app.py
ui/components/: chat.py  risk_visualizer.py  upload.py
